# aurium-people

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
aurium_people/: __init__.py  _documents.py  _education.py  _employment.py  _generators.py  _organisations.py  _utils.py  profile.py  profiles.py
tests/: test_coherence.py  test_profiles.py  test_reproducibility.py
