[project]
name = "aurium-people"
version = "0.1.0"
description = "Generate coherent synthetic US-person profiles sampled from US demographic distributions."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aurium Labs" }]
dependencies = [
    "faker>=38.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aurium_people"]

[tool.pytest.ini_options]
testpaths = ["tests"]
