[project]
name = "aurium-people"
version = "0.1.0"
description = "Generate coherent synthetic US-person profiles sampled from US demographic distributions."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aurium Labs" }]
dependencies = [
    "faker>=38.0.0",
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/aurium-labs/aurium-people"
Repository = "https://github.com/aurium-labs/aurium-people"
Issues = "https://github.com/aurium-labs/aurium-people/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aurium_people"]

[tool.pytest.ini_options]
testpaths = ["tests"]
